--- a/src/Twino.Extensions.Data/Twino.Extensions.Data.csproj
+++ b/src/Twino.Extensions.Data/Twino.Extensions.Data.csproj
@@ -6,14 +6,14 @@
     <Product>Twino.Extensions.Data</Product>
     <Description>Entity Framework Core Data Context extension for Twino IOC</Description>
     <PackageTags>twino,entity,framework,data,context,factory,ioc,service</PackageTags>
-    <AssemblyVersion>3.1.2</AssemblyVersion>
-    <FileVersion>3.1.2</FileVersion>
-    <PackageVersion>3.1.2</PackageVersion>
+    <AssemblyVersion>3.2.7</AssemblyVersion>
+    <FileVersion>3.2.7</FileVersion>
+    <PackageVersion>3.2.7</PackageVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Mehmet Helvacıköylü;Emre Hızlı</Authors>
-    <PackageProjectUrl>https://github.com/mhelvacikoylu/twino</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/mhelvacikoylu/twino/blob/master/LICENSE</PackageLicenseUrl>
-    <RepositoryUrl>https://github.com/mhelvacikoylu/twino</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/twino-framework/twino-extensions</PackageProjectUrl>
+    <PackageLicenseUrl>https://github.com/twino-framework/twino-extensions/blob/master/LICENSE</PackageLicenseUrl>
+    <RepositoryUrl>https://github.com/twino-framework/twino-extensions</RepositoryUrl>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
@@ -25,8 +25,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
-    <PackageReference Include="Twino.Ioc" Version="3.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.6" />
+    <PackageReference Include="Twino.Ioc" Version="3.2.7" />
   </ItemGroup>
 
 </Project>
