--- a/src/Twino.Extensions.Http/Twino.Extensions.Http.csproj
+++ b/src/Twino.Extensions.Http/Twino.Extensions.Http.csproj
@@ -6,14 +6,14 @@
     <Product>Twino.Extensions.Http</Product>
     <Description>HttpClient Factory extension for Twino IOC</Description>
     <PackageTags>twino,http,client,factory,ioc,dependency,injection,service</PackageTags>
-    <AssemblyVersion>3.1.2</AssemblyVersion>
-    <FileVersion>3.1.2</FileVersion>
-    <PackageVersion>3.1.2</PackageVersion>
+    <AssemblyVersion>3.2.7</AssemblyVersion>
+    <FileVersion>3.2.7</FileVersion>
+    <PackageVersion>3.2.7</PackageVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Mehmet Helvacıköylü;Emre Hızlı</Authors>
-    <PackageProjectUrl>https://github.com/mhelvacikoylu/twino</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/mhelvacikoylu/twino/blob/master/LICENSE</PackageLicenseUrl>
-    <RepositoryUrl>https://github.com/mhelvacikoylu/twino</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/twino-framework/twino-extensions</PackageProjectUrl>
+    <PackageLicenseUrl>https://github.com/twino-framework/twino-extensions/blob/master/LICENSE</PackageLicenseUrl>
+    <RepositoryUrl>https://github.com/twino-framework/twino-extensions</RepositoryUrl>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
@@ -25,7 +25,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Twino.Ioc" Version="3.1.2" />
+    <PackageReference Include="Twino.Ioc" Version="3.2.7" />
   </ItemGroup>
   
 </Project>
