--- a/src/Samples/Sample.ConsumerFactory/Sample.ConsumerFactory.csproj
+++ b/src/Samples/Sample.ConsumerFactory/Sample.ConsumerFactory.csproj
@@ -9,4 +9,8 @@
       <ProjectReference Include="..\..\Twino.Extensions.ConsumerFactory\Twino.Extensions.ConsumerFactory.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Twino.Client.TMQ" Version="3.3.15" />
+    </ItemGroup>
+
 </Project>
