--- a/src/Twino.Extensions.Bus/Twino.Extensions.Bus.csproj
+++ b/src/Twino.Extensions.Bus/Twino.Extensions.Bus.csproj
@@ -2,26 +2,27 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
-        <Title>Twino.Extensions.ConsumerFactory</Title>
-        <Product>Twino.Extensions.ConsumerFactory</Product>
-        <Description>Twino Client Message Consumer extension for Twino IOC</Description>
-        <PackageTags>twino,tmq,message,consumer,channel,direct</PackageTags>
-        <AssemblyVersion>3.7.0</AssemblyVersion>
-        <FileVersion>3.7.0</FileVersion>
-        <PackageVersion>3.7.0</PackageVersion>
+        <Title>Twino.Extensions.Bus</Title>
+        <Product>Twino.Extensions.Bus</Product>
+        <Description>Twino MQ Bus extension for Twino IOC</Description>
+        <PackageTags>twino,tmq,consumer,bus</PackageTags>
+        <AssemblyVersion>4.0.1</AssemblyVersion>
+        <FileVersion>4.0.1</FileVersion>
+        <PackageVersion>4.0.1-beta</PackageVersion>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Authors>Mehmet Helvacıköylü;Emre Hızlı</Authors>
         <PackageProjectUrl>https://github.com/twino-framework/twino-extensions</PackageProjectUrl>
         <PackageLicenseUrl>https://github.com/twino-framework/twino-extensions/blob/master/LICENSE</PackageLicenseUrl>
         <RepositoryUrl>https://github.com/twino-framework/twino-extensions</RepositoryUrl>
+        <RootNamespace>Twino.Extensions.Bus</RootNamespace>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-        <DocumentationFile>bin\Debug\Twino.Extensions.ConsumerFactory.xml</DocumentationFile>
+        <DocumentationFile>bin\Debug\Twino.Extensions.Bus.xml</DocumentationFile>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-        <DocumentationFile>bin\Release\Twino.Extensions.ConsumerFactory.xml</DocumentationFile>
+        <DocumentationFile>bin\Release\Twino.Extensions.Bus.xml</DocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
