--- a/src/Twino.Extensions.Bus/Twino.Extensions.Bus.csproj
+++ b/src/Twino.Extensions.Bus/Twino.Extensions.Bus.csproj
@@ -26,7 +26,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Twino.Client.TMQ" Version="3.7.0" />
+        <PackageReference Include="Twino.Client.TMQ" Version="4.0.1-beta" />
         <PackageReference Include="Twino.Ioc" Version="3.4.2" />
     </ItemGroup>
 
