--- a/src/Twino.Extensions.Bus/Twino.Extensions.Bus.csproj
+++ b/src/Twino.Extensions.Bus/Twino.Extensions.Bus.csproj
@@ -6,9 +6,9 @@
         <Product>Twino.Extensions.Bus</Product>
         <Description>Twino MQ Bus extension for Twino IOC</Description>
         <PackageTags>twino,tmq,consumer,bus</PackageTags>
-        <AssemblyVersion>4.0.1</AssemblyVersion>
-        <FileVersion>4.0.1</FileVersion>
-        <PackageVersion>4.0.1-beta</PackageVersion>
+        <AssemblyVersion>4.0.3</AssemblyVersion>
+        <FileVersion>4.0.3</FileVersion>
+        <PackageVersion>4.0.3</PackageVersion>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Authors>Mehmet Helvacıköylü;Emre Hızlı</Authors>
         <PackageProjectUrl>https://github.com/twino-framework/twino-extensions</PackageProjectUrl>
@@ -26,7 +26,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Twino.Client.TMQ" Version="4.0.1-beta" />
+        <PackageReference Include="Twino.Client.TMQ" Version="4.0.3" />
         <PackageReference Include="Twino.Ioc" Version="3.4.2" />
     </ItemGroup>
 
