--- a/src/Samples/Sample.ConsumerFactory/Sample.ConsumerFactory.csproj
+++ b/src/Samples/Sample.ConsumerFactory/Sample.ConsumerFactory.csproj
@@ -6,7 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Twino.Client.TMQ" Version="4.0.1-beta" />
+      <PackageReference Include="Twino.Client.TMQ" Version="4.0.3" />
     </ItemGroup>
 
     <ItemGroup>
