--- a/src/Samples/Sample.Bus/Sample.Bus.csproj
+++ b/src/Samples/Sample.Bus/Sample.Bus.csproj
@@ -3,10 +3,11 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
+        <RootNamespace>Sample.ConsumerFactory</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Twino.Client.TMQ" Version="4.0.4" />
+      <PackageReference Include="Twino.Client.TMQ" Version="4.0.5" />
     </ItemGroup>
 
     <ItemGroup>
